--- a/views/welcome.html
+++ b/views/welcome.html
@@ -50,7 +50,9 @@
     <footer class="page-footer black lighten-3 white-text">
         <div class="black footer-copyright">
             <div class="container">
-                © 2020 Copyright Sanchit Dang
+                <center>
+                    © 2020 Copyright Sanchit Dang
+                </center>
             </div>
         </div>
     </footer>
